tests/machine/x/cpp/list_set_ops.mochi.error
line 13: ../../../tests/machine/x/cpp/list_set_ops.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:13:34: error: expected ‘)’ before ‘union’
   13 |     print((std::vector<int>{1, 2} union std::vector<int>{2, 3}));
      |           ~                      ^~~~~~
      |                                  )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:13:64: error: expected ‘;’ before ‘)’ token
   13 |     print((std::vector<int>{1, 2} union std::vector<int>{2, 3}));
      |                                                                ^
      |                                                                ;
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:14:37: error: expected ‘)’ before ‘except’
   14 |     print((std::vector<int>{1, 2, 3} except std::vector<int>{2}));
      |           ~                         ^~~~~~~
      |                                     )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:14:65: error: expected ‘;’ before ‘)’ token
   14 |     print((std::vector<int>{1, 2, 3} except std::vector<int>{2}));
      |                                                                 ^
      |                                                                 ;
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:15:37: error: expected ‘)’ before ‘intersect’
   15 |     print((std::vector<int>{1, 2, 3} intersect std::vector<int>{2, 4}));
      |           ~                         ^~~~~~~~~~
      |                                     )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:15:71: error: expected ‘;’ before ‘)’ token
   15 |     print((std::vector<int>{1, 2, 3} intersect std::vector<int>{2, 4}));
      |                                                                       ^
      |                                                                       ;
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:16:34: error: expected ‘)’ before ‘union’
   16 |     print((std::vector<int>{1, 2} union std::vector<int>{2, 3}).size());
      |           ~                      ^~~~~~
      |                                  )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:16:10: error: invalid use of ‘void’
   16 |     print((std::vector<int>{1, 2} union std::vector<int>{2, 3}).size());
      |     ~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

 12 | int main() {
 13 |     print((std::vector<int>{1, 2} union std::vector<int>{2, 3}));
 14 |     print((std::vector<int>{1, 2, 3} except std::vector<int>{2}));
